@@ -19,7 +19,7 @@
 #
 
 
-AC_INIT([torrus],[1.0.1pl2],[ssinyagin@users.sourceforge.net])
+AC_INIT([torrus],[1.0.2d],[ssinyagin@users.sourceforge.net])
 AC_CONFIG_AUX_DIR(conftools)
 AC_CANONICAL_HOST
 AM_INIT_AUTOMAKE(1.9)
