@@ -1,0 +1,107 @@
+#  Copyright (C) 2004  Stanislav Sinyagin
+#
+#  This program is free software; you can redistribute it and/or modify
+#  it under the terms of the GNU General Public License as published by
+#  the Free Software Foundation; either version 2 of the License, or
+#  (at your option) any later version.
+#
+#  This program is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU General Public License for more details.
+#
+#  You should have received a copy of the GNU General Public License
+#  along with this program; if not, write to the Free Software
+#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
+
+# $Id$
+# Stanislav Sinyagin <ssinyagin@yahoo.com>
+#
+#
+
+=head1 NAME
+
+rrddir2xml - Searches a directory for RRD files and generates Torrus XML
+configuration file.
+
+=head1 SYNOPSIS
+
+B<torrus rrddir2xml> --dir=I<DIR> [I<options...>]
+
+=head1 DESCRIPTION
+
+B<rrddir2xml> searches in a given directory for RRD files and
+creates Torrus XML configuration file suitable for browsing ofthose data
+files.
+
+With default options, it is usable for RRD files generated by Torrus'
+SNMP collector, where the file name starts with the host name, separated by
+underscore from interface name or other MIB specifics. With these
+defaults, it creates a subtree per each host name, and all RRD files belonging
+top that host name are sorted alphabetically in that subtree.
+
+=head1 OPTIONS
+
+=over 4
+
+=item B<--dir>=I<DIR>
+
+Absolute path to the directory for searching. The directory may contain also
+non-RRD files. Only regular files are processed, and the symlinks are ignored.
+
+=item B<--recursive>
+
+If specified, the directory will be searched recursively. All file names
+across all subdirectories must be unique. Symlinks to other directories
+are ignored.
+
+=item B<--out>=I<FILE>
+
+Output XML file name. If relative path given, the file is placed in
+F<@sitexmldir@>. Default: F<rrddir.xml>.
+
+=item B<--subtree>=I<SUBTREE>
+
+Top subtree path in the generted XML. Default is the top of the tree (C</>).
+
+=item B<--split>=I<REGEXP>
+
+Regular expression used for splitting the file name into parts
+to build the subtree hierarchy. Default is a sequence of underscores (C<_+>).
+
+=item B<--levels>=I<INTEGER>
+
+Number of levels of hierarchy to build by splitting the file names.
+Default is 2 levels.
+
+=item B<--comment>=I<TEXT>
+
+Text to put as C<comment> parameter to the top subtree.
+
+=item B<--holtwinters>
+
+If specified, Holt-Winters prediciton boundaries and failures are displayed
+in the graphs.
+
+=item B<--verbose>
+
+Prints extra diagnosics.
+
+=item B<--debug>
+
+Prints debugging information.
+
+=back
+
+
+=head1 SEE ALSO
+
+L<torrus(@mansec_usercmd@)>
+
+=head1 NOTES
+
+See more documentation at Torrus home page: http://torrus.org
+
+=head1 AUTHOR
+
+Stanislav Sinyagin E<lt>ssinyagin@yahoo.comE<gt>
