@@ -1,3 +1,8 @@
+2005-07-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* bin/rrddir2xml.in: New utility for generating XML from a directory
+	with RRD files
+
 2005-06-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/Collector/SNMP.pm: [1.0.1pl2] - fixed bug
